fix member directory spacing

--- a/public/styles/member-directory.css
+++ b/public/styles/member-directory.css
@@ -12,6 +12,7 @@ h2 {font-size: 16px;
     text-align: left;
     color: black;
 }
+
 p {
     font-size: 12px;
 }    
@@ -22,6 +23,11 @@ p {
     padding-left: 8px;
     padding-right: 8px;
     border: 1px solid black ;
+}
+
+.tight {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 
